--- a/friends.html
+++ b/friends.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends|Mariclub</title>
+    <title>Friends | Marioclub</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <!-- document start -->
+    <header>
+        <div class="second-banner">
+            <img src="mario_friends.jpg" alt="">
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
