--- a/index.html
+++ b/index.html
@@ -3,37 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home|Mariclub</title>
+    <title>Home | Mari0club</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Document Start -->
     <header>
         <!-- Main Title -->
-        <div>
+        <div class="main-title">
             <h1>Mario Adventure Club</h1>
         </div>
         <!-- Nav Bar -->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="friends.html">Friends</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="contact.html">Contacts</a>
+        <nav class="nav-links">
+            <a class="nav-link1" href="index.html">Home</a>
+            <a class="nav-link2" href="friends.html">Friends</a>
+            <a class="nav-link3" href="gallery.html">Gallery</a>
+            <a class="nav-link4" href="contact.html">Contacts</a>
         </nav>
         <!-- Main Banner -->
-        <div>
+        <div class="banner-container">
             <img src="img/banner_2.jpg" alt="A picture of mario">
         </div>
     </header>
     <!-- Main Content -->
     <main>
-        <div>
+        <div class="mario-intro">
             <h1>It's Me, Mario!</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dignissimos, culpa eveniet suscipit alias veniam eum recusandae excepturi, quae nesciunt tempore dicta inventore dolore, eius officiis at saepe odio eaque debitis deserunt possimus doloremque. Laborum velit expedita placeat asperiores adipisci ratione. Consequuntur quos blanditiis voluptatibus illum, veniam porro nesciunt sint?<br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quibusdam, hic earum sequi delectus minima? Nam perspiciatis tempore cupiditate sequi quis nulla unde facilis aliquam non. Possimus impedit voluptatum ea, explicabo autem nostrum sequi, excepturi ullam maiores placeat officiis exercitationem, dolores doloremque architecto aperiam consequatur aliquid nulla? Repudiandae, amet doloremque.</p>
         </div>
     </main>
     <!-- Footer Content -->
-    <footer></footer>
+    <footer>
+        <!-- Copyright links -->
+        <h6>&COPY; 2025 Aizza Dakpokpo</h6>
+    </footer>
 </body>
 </html>
