Mario Project Done

--- a/friends.html
+++ b/friends.html
@@ -7,13 +7,63 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- document start -->
+    <!-- Document Start -->
     <header>
-        <div class="second-banner">
-            <img src="mario_friends.jpg" alt="">
+        <!-- Main Title -->
+        <div class="main-title">
+            <h1>Mario Adventure Club</h1>
+        </div>
+        <!-- Nav Bar -->
+        <nav class="nav-links">
+            <a class="nav-link1" href="index.html">Home</a>
+            <a class="nav-link2" href="friends.html">Friends</a>
+            <a class="nav-link3" href="gallery.html">Gallery</a>
+            <a class="nav-link4" href="contact.html">Contacts</a>
+        </nav>
+        <!-- Main Banner -->
+        <div class="banner-container">
+            <img src="img/mario_friends.jpg" alt="Mario's friends">
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <div class="mario-intro">
+            <h1>Meet Mario Friends!</h1>
+            <p>Here are some of Mario's most notable friends and their basic characteristics</p>
+            <!-- Friend 1 -->
+            <div class="friend">
+                <img src="img/luigi.webp" alt="Luigi">
+                <h4>Luigi</h4>
+                <p>Mario's younger brother. He's taller and thinner than Mario, often depicted as more cautious and timid, but very brave when it counts. He wears a green hat and overalls.</p>
+            </div>
+            <!-- First 2 -->
+            <div class="friend">
+                <img src="img/princess_peach.webp" alt="princess_peach">
+                <h4>Princess Peach</h4>
+                <p>The ruler of the Mushroom Kingdom. Known for her kindness, grace, and leadership. Often the damsel in distress but also takes an active role in various adventures. She wears a pink dress and crown.</p>
+            </div>
+            <!-- Friend 3 -->
+            <div class="friend">
+                <img src="img/yoshi.webp" alt="Yoshi">
+                <h4>Yoshi</h4>
+                <p>A friendly dinosaur who helps Mario by giving him rides 3 and using his long tongue to eat enemies and obstacles. Known for his loyalty and cheerful demeanor. Yoshi comes in various colors, but green is the most iconic.</p>
+            </div>
+            <!-- Friend 4 -->
+            <div class="friend">
+                <img src="img/toad.webp" alt="Toad">
+                <h4>Toad</h4>
+                <p>A loyal attendant to Princess Peach and a resident of the Mushroom Kingdom. Known for his mushroom-shaped head and blue vest. He's helpful, brave, and always eager to assist Mario on his quests.</p>
+            </div>
+            <!-- Friend 5 -->
+            <div class="friend">
+                <img src="img/bowser.webp" alt="Bowser">
+                <h4>Bowser</h4>
+                <p>He is a large, powerful, and fearsome creature resembling a dragon-turtle hybrid. Known for his imposing size, spiked shell, and fiery breath, Bowser's main goal is often to kidnap Princess Peach and conquer the Mushroom Kingdom</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <!-- Copyright links -->
+        <h6>&COPY; 2025 Aizza Dakpokpo</h6>
+    </footer>
 </body>
 </html>
