Contact page done

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- Document Start -->
+    <header>
+        <!-- Main Title -->
+        <div class="main-title">
+            <h1>Mario Adventure Club</h1>
+        </div>
+        <!-- Nav Bar -->
+        <nav class="nav-links">
+            <a class="nav-link1" href="index.html">Home</a>
+            <a class="nav-link2" href="friends.html">Friends</a>
+            <a class="nav-link3" href="gallery.html">Gallery</a>
+            <a class="nav-link4" href="contact.html">Contacts</a>
+        </nav>
+
+        <div class="background">
+            <img src="img/banner.png" alt="">
+            <div class="forms">
+                <input type="text" placeholder="Your Name"><br>
+                <input type="email" placeholder="Your email"><br>
+                <textarea name="" id="" cols="23" rows="5" placeholder="Your message"></textarea><br>
+                <input class="end" type="submit">
+            </div>
+        </div>
+
+        <!-- <div class="parent-div">
+            <h1>
+                My name is Aizza
+            </h1>
+            <div class="child-div">
+                <h3>My name is Ariella</h3>
+            </div>
+        </div> -->
+
+        
+    </header>
     <main></main>
     <footer></footer>
 </body>
