--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- Main Title -->
+        <div class="main-title">
+            <h1>Mario Adventure Club</h1>
+        </div>
+        <!-- Nav Bar -->
+        <nav class="nav-links">
+            <a class="nav-link1" href="index.html">Home</a>
+            <a class="nav-link2" href="friends.html">Friends</a>
+            <a class="nav-link3" href="gallery.html">Gallery</a>
+            <a class="nav-link4" href="contact.html">Contacts</a>
+        </nav>
+
+        <div class="gallery">
+            <h1>Gallery</h1>
+        </div>
+
+        <div class="pictures">
+            <img src="img/thumb-1.png" alt="">
+            <img src="img/thumb-2.png" alt="">
+            <img src="img/thumb-3.jpg" alt="">
+            <img src="img/thumb-4.jpg" alt="">
+            </div>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+    <!-- Copyright links -->
+        <h6>&COPY; 2025 Aizza Dakpokpo</h6>
+    </footer>
 </body>
 </html>
