Removed excess written code

--- a/friends.html
+++ b/friends.html
@@ -15,10 +15,10 @@
         </div>
         <!-- Nav Bar -->
         <nav class="nav-links">
-            <a class="nav-link1" href="index.html">Home</a>
-            <a class="nav-link2" href="friends.html">Friends</a>
-            <a class="nav-link3" href="gallery.html">Gallery</a>
-            <a class="nav-link4" href="contact.html">Contacts</a>
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="friends.html">Friends</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="contact.html">Contacts</a>
         </nav>
         <!-- Main Banner -->
         <div class="banner-container">
