--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
     <main>
         <div class="mario-intro">
             <h1>It's Me, Mario!</h1>
-            <p>Hello, everyone! It's me, Mario! I'm so happy to be here with all of you today. You might know me from my adventures in the Mushroom Kingdom, where I team up with my brother Luigi, my best friend Yoshi, and many other friends to save Princess Peach from the mischievous Bowser. We go on exciting quests, explore magical worlds, and solve tricky puzzles. Whether we're racing go-karts, playing sports, or going on fantastic adventures, there's always something fun and new happening! <br> But it's not all about rescuing princesses and defeating villains. I also love to have fun and make new friends, just like you! I enjoy jumping around, collecting coins, and discovering hidden secrets. Most importantly, I believe in being brave, helping others, and never giving up, no matter how tough things get. So, always remember to stay positive, be kind to your friends, and keep having fun! Let's-a go on some great adventures together!</p>
+            <p>Hello, everyone! It's me, Mario! I'm so happy to be here with all of you today. You might know me from my adventures in the Mushroom Kingdom, where I team up with my brother Luigi, my best friend Yoshi, and many other friends to save Princess Peach from the mischievous Bowser. We go on exciting quests, explore magical worlds, and solve tricky puzzles. Whether we're racing go-karts, playing sports, or going on fantastic adventures, there's always something fun and new happening!
+            </p>
+            <div class="pics">
+                <img src="img/thumb-1.png" alt="">
+                <img src="img/thumb-4.jpg" alt="">
+            </div>
+            <p>
+                But it's not all about rescuing princesses and defeating villains. I also love to have fun and make new friends, just like you! I enjoy jumping around, collecting coins, and discovering hidden secrets. Most importantly, I believe in being brave, helping others, and never giving up, no matter how tough things get. So, always remember to stay positive, be kind to your friends, and keep having fun! Let's-a go on some great adventures together!</p>
         </div>
     </main>
     <!-- Footer Content -->
