--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <!-- Nav Bar -->
         <nav class="nav-links">
-            <a class="nav-link1" href="index.html">Home</a>
-            <a class="nav-link2" href="friends.html">Friends</a>
-            <a class="nav-link3" href="gallery.html">Gallery</a>
-            <a class="nav-link4" href="contact.html">Contacts</a>
+            <a href="index.html">Home</a>
+            <a href="friends.html">Friends</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact.html">Contacts</a>
         </nav>
         <!-- Main Banner -->
         <div class="banner-container">
@@ -42,7 +42,7 @@
     <!-- Footer Content -->
     <footer>
         <!-- Copyright links -->
-        <h6>&COPY; 2025 Aizza Dakpokpo</h6>
+        <h6>&COPY; 2025 <a href="https://github.com/Aizza1" target="_blank">Aizza Dakpokpo</a></h6>
     </footer>
 </body>
 </html>
